--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@
 override_dh_auto_build:
 	# Terrible hack to use modern platformio to build the native version
 	python3 -m venv venv
-	source venv/bin/activate
+	. venv/bin/activate
 	pip install platformio
 	platformio run -e native
 	deactivate
