--- a/debian/rules
+++ b/debian/rules
@@ -1,17 +1,18 @@
 #!/usr/bin/make -f
+# export DH_VERBOSE = 1
 
 # Use the "dh" sequencer
 %:
 	dh $@
 
+# https://docs.platformio.org/en/latest/envvars.html
+PIO_ENV:=\
+	PLATFORMIO_LIBDEPS_DIR=pio/libdeps \
+	PLATFORMIO_PACKAGES_DIR=pio/packages
+
 override_dh_auto_build:
-	# Terrible hack to use modern platformio to build the native version
-	# python3 -m venv venv
-	# . venv/bin/activate
-	pip install platformio --break-system-packages
-	platformio run -e native
-	# deactivate
-	# rm -rf venv
+	# Build with platformio
+	$(PIO_ENV) platformio run -e native
 	# Move the binary and default config to the correct name
 	mv .pio/build/native/program .pio/build/native/meshtasticd
 	cp bin/config-dist.yaml bin/config.yaml
