--- a/.github/workflows/main_matrix.yml
+++ b/.github/workflows/main_matrix.yml
@@ -129,7 +129,13 @@ jobs:
       board: ${{ matrix.board }}
 
   package-ppa:
+    strategy:
+      fail-fast: false
+      matrix:
+        series: [plucky, oracular, noble, jammy]
     uses: ./.github/workflows/package_ppa.yml
+    with:
+      series: ${{ matrix.series }}
     secrets: inherit
 
   package-raspbian:
