--- a/.github/workflows/build_debian_src.yml
+++ b/.github/workflows/build_debian_src.yml
@@ -43,25 +43,24 @@ jobs:
           gpg_private_key: ${{ secrets.PPA_GPG_PRIVATE_KEY }}
         id: gpg
 
+      - name: Get release version string
+        working-directory: meshtasticd
+        run: |
+          echo "deb=$(./bin/buildinfo.py deb)" >> $GITHUB_OUTPUT
+        id: version
+
       - name: Fetch libdeps, package debian source
         working-directory: meshtasticd
         run: debian/ci_pack_sdeb.sh
         env:
           SERIES: ${{ inputs.series }}
           GPG_KEY_ID: ${{ steps.gpg.outputs.keyid }}
-          REVISION: ${{ github.sha }}
-
-      - name: Get release version string
-        working-directory: meshtasticd
-        run: |
-          echo "long=$(./bin/buildinfo.py long)" >> $GITHUB_OUTPUT
-          echo "short=$(./bin/buildinfo.py short)" >> $GITHUB_OUTPUT
-        id: version
+          PKG_VERSION: ${{ steps.version.outputs.deb }}
 
       - name: Store binaries as an artifact
         uses: actions/upload-artifact@v4
         with:
-          name: firmware-debian-${{ steps.version.outputs.long }}-${{ inputs.series }}-src
+          name: firmware-debian-${{ steps.version.outputs.deb }}~${{ inputs.series }}-src
           overwrite: true
           path: |
-            meshtasticd_${{ steps.version.outputs.short }}*
+            meshtasticd_${{ steps.version.outputs.deb }}*
