--- a/variants/tlora_v2_1_16/platformio.ini
+++ b/variants/tlora_v2_1_16/platformio.ini
@@ -3,5 +3,11 @@ extends = esp32_base
 board = ttgo-lora32-v21
 board_check = true
 build_flags = 
-  ${esp32_base.build_flags} -D TLORA_V2_1_16 -I variants/tlora_v2_1_16
+  ${esp32_base.build_flags}
+  -D TLORA_V2_1_16
+  -I variants/tlora_v2_1_16
   -DGPS_POWER_TOGGLE ; comment this line to disable triple press function on the user button to turn off gps entirely.
+  -DRADIOLIB_EXCLUDE_SX128X=1
+  -DRADIOLIB_EXCLUDE_SX126X=1
+  -DRADIOLIB_EXCLUDE_LR11X0=1
+  
