--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -17,3 +17,12 @@ jobs:
         uses: trunk-io/trunk-action@782e83f803ca6e369f035d64c6ba2768174ba61b
         with:
           trunk-token: ${{ secrets.TRUNK_TOKEN }}
+  package-ppa:
+    strategy:
+      fail-fast: false
+      matrix:
+        series: [plucky, oracular, noble, jammy]
+    uses: ./.github/workflows/package_ppa.yml
+    with:
+      series: ${{ matrix.series }}
+    secrets: inherit
