--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,8 @@ Section: misc
 Priority: optional
 Maintainer: Austin Lane <vidplace7@gmail.com>
 Build-Depends: debhelper-compat (= 13),
+               tar,
+               gzip,
                platformio,
                python3-protobuf,
                python3-grpcio,
