--- a/.github/workflows/release_channels.yml
+++ b/.github/workflows/release_channels.yml
@@ -2,7 +2,7 @@ name: Trigger release workflows upon Publish
 
 on:
   release:
-    types: [published]
+    types: [published, released]
 
 permissions: read-all
 
@@ -18,3 +18,10 @@ jobs:
         ${{ contains(github.event.release.name, 'Beta') && 'beta' || contains(github.event.release.name, 'Alpha') && 'alpha' }}
       series: ${{ matrix.series }}
     secrets: inherit
+
+  # package-obs:
+  #   uses: ./.github/workflows/package_obs.yml
+  #   with:
+  #     obs_repo: meshtasticd
+  #     series: ${{ contains(github.event.release.name, 'Beta') && 'beta' || contains(github.event.release.name, 'Alpha') && 'alpha' }}
+  #   secrets: inherit
