Mesh-Tab platformio: 4.0inch: increase SPI frequency to max

--- a/variants/mesh-tab/platformio.ini
+++ b/variants/mesh-tab/platformio.ini
@@ -165,7 +165,7 @@ build_flags = ${mesh_tab_ft5x06.build_flags}
 [env:mesh-tab-4-0-IPS-capacitive]
 extends = mesh_tab_base
 build_flags = ${mesh_tab_ft5x06.build_flags}
-  -D SPI_FREQUENCY=30000000 ; may go higher upto 40/60/80 MHz
+  -D SPI_FREQUENCY=75000000
   -D DISPLAY_SET_RESOLUTION
   -D LGFX_SCREEN_WIDTH=320
   -D LGFX_SCREEN_HEIGHT=480
