--- a/variants/rak2560/platformio.ini
+++ b/variants/rak2560/platformio.ini
@@ -1,4 +1,4 @@
-; The very slick RAK wireless RAK 4631 / 4630 board - Unified firmware for 5005/19003, with or without OLED RAK 1921
+; Firmware for the WisMesh HUB RAK2560, including a onewire module to talk to the RAK 9154 solar battery.
 [env:rak2560]
 extends = nrf52840_base
 board = wiscore_rak4631
@@ -6,6 +6,9 @@ board_check = true
 build_flags = ${nrf52840_base.build_flags} -Ivariants/rak2560 -D RAK_4631
   -L "${platformio.libdeps_dir}/${this.__env__}/bsec2/src/cortex-m4/fpv4-sp-d16-hard"
   -DGPS_POWER_TOGGLE ; comment this line to disable triple press function on the user button to turn off gps entirely.
+  -DRADIOLIB_EXCLUDE_SX128X=1
+  -DRADIOLIB_EXCLUDE_SX127X=1
+  -DRADIOLIB_EXCLUDE_LR11X0=1
   -DHAS_RAKPROT=1 ; Define if RAk OneWireSerial is used (disables GPS)
 build_src_filter = ${nrf52_base.build_src_filter} +<../variants/rak2560> +<mesh/eth/> +<mesh/api/> +<mqtt/>
 lib_deps = 
