--- a/variants/rak2560/platformio.ini
+++ b/variants/rak2560/platformio.ini
@@ -10,15 +10,14 @@ build_flags = ${nrf52840_base.build_flags} -Ivariants/rak2560 -D RAK_4631
   -DRADIOLIB_EXCLUDE_SX127X=1
   -DRADIOLIB_EXCLUDE_LR11X0=1
   -DHAS_RAKPROT=1 ; Define if RAk OneWireSerial is used (disables GPS)
-build_src_filter = ${nrf52_base.build_src_filter} +<../variants/rak2560> +<mesh/eth/> +<mesh/api/> +<mqtt/>
+build_src_filter = ${nrf52_base.build_src_filter} +<../variants/rak2560> +<mesh/api/> +<mqtt/>
 lib_deps = 
   ${nrf52840_base.lib_deps}
   ${networking_base.lib_deps}
   melopero/Melopero RV3028@^1.1.0
-  https://github.com/RAKWireless/RAK13800-W5100S.git#1.0.2
   rakwireless/RAKwireless NCP5623 RGB LED library@^1.0.2
   beegee-tokyo/RAKwireless RAK12034@^1.0.0
-  https://github.com/beegee-tokyo/RAK-OneWireSerial.git
+  https://github.com/beegee-tokyo/RAK-OneWireSerial.git#0.0.2
 debug_tool = jlink
 ; If not set we will default to uploading over serial (first it forces bootloader entry by talking 1200bps to cdcacm)
 ;upload_protocol = jlink
