--- a/.github/actions/setup-base/action.yml
+++ b/.github/actions/setup-base/action.yml
@@ -26,13 +26,10 @@ runs:
       uses: actions/setup-python@v5
       with:
         python-version: 3.x
-
-    # - name: Cache python libs
-    #   uses: actions/cache@v4
-    #   id: cache-pip # needed in if test
-    #   with:
-    #     path: ~/.cache/pip
-    #     key: ${{ runner.os }}-pip
+        cache: pip
+        cache-dependency-path: |
+          .github/actions/**
+          **.ini
 
     - name: Upgrade python tools
       shell: bash
