--- a/.github/actions/setup-base/action.yml
+++ b/.github/actions/setup-base/action.yml
@@ -26,10 +26,13 @@ runs:
       uses: actions/setup-python@v5
       with:
         python-version: 3.x
-        cache: pip
-        cache-dependency-path: |
-          .github/actions/**
-          **.ini
+
+    # - name: Cache python libs
+    #   uses: actions/cache@v4
+    #   id: cache-pip # needed in if test
+    #   with:
+    #     path: ~/.cache/pip
+    #     key: ${{ runner.os }}-pip
 
     - name: Upgrade python tools
       shell: bash
