--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,50 +1,14 @@
+# This file controls the behavior of Trunk: https://docs.trunk.io/cli
+# To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.22.8
+  version: 1.22.2
+# Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
 plugins:
   sources:
     - id: trunk
-      ref: v1.6.6
+      ref: v1.6.1
       uri: https://github.com/trunk-io/plugins
 lint:
   enabled:
-    - prettier@3.4.2
-    - trufflehog@3.86.1
-    - yamllint@1.35.1
-    - bandit@1.8.0
-    - checkov@3.2.334
-    - terrascan@1.19.9
-    - trivy@0.58.0
-    #- trufflehog@3.63.2-rc0
-    - taplo@0.9.3
-    - ruff@0.8.3
-    - isort@5.13.2
-    - markdownlint@0.43.0
-    - oxipng@9.1.3
-    - svgo@3.3.2
-    - actionlint@1.7.4
-    - flake8@7.1.1
-    - hadolint@2.12.1-beta
-    - shfmt@3.6.0
-    - shellcheck@0.10.0
-    - black@24.10.0
-    - git-diff-check
-    - gitleaks@8.21.2
     - clang-format@16.0.3
-    #- prettier@3.3.3
-  ignore:
-    - linters: [ALL]
-      paths:
-        - bin/**
-runtimes:
-  enabled:
-    - python@3.10.8
-    - go@1.21.0
-    - node@18.20.5
-actions:
-  disabled:
-    - trunk-announce
-  enabled:
-    - trunk-fmt-pre-commit
-    - trunk-check-pre-push
-    - trunk-upgrade-available
