Fix daily packaging perms

--- a/.github/workflows/hook_copr.yml
+++ b/.github/workflows/hook_copr.yml
@@ -12,7 +12,9 @@ on:
         required: true
         type: string
 
-permissions: read-all
+permissions:
+  contents: write
+  packages: write
 
 jobs:
   build-copr-hook:
