COPR: Switch to forked GitHub Action

--- a/.github/workflows/hook_copr.yml
+++ b/.github/workflows/hook_copr.yml
@@ -25,12 +25,8 @@ jobs:
           ref: ${{ github.ref }}
           repository: ${{ github.repository }}
 
-      - name: Install Python dependencies
-        run: |
-          pip install requests
-
       - name: Trigger COPR build
-        uses: akdev1l/copr-build@main
+        uses: vidplace7/copr-build@main
         id: copr_build
         env:
           COPR_API_TOKEN_CONFIG: ${{ secrets.COPR_API_CONFIG }}
