preparations for generic DisplayDriverFactory

--- a/variants/picomputer-s3/platformio.ini
+++ b/variants/picomputer-s3/platformio.ini
@@ -52,6 +52,7 @@ build_flags =
   -D USE_LOG_DEBUG
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
   -D LGFX_DRIVER=LGFX_PICOMPUTER_S3
+  -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_PICOMPUTER_S3.h\"
   -D VIEW_320x240
 ;	-D USE_DOUBLE_BUFFER
   -D USE_PACKET_API
