--- a/variants/seeed-sensecap-indicator/platformio.ini
+++ b/variants/seeed-sensecap-indicator/platformio.ini
@@ -63,9 +63,10 @@ build_flags =
   -D LV_USE_LOG=0
   -D USE_LOG_DEBUG
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
-  -D CUSTOM_TOUCH_DRIVER
-  -D CALIBRATE_TOUCH=0
+;  -D CUSTOM_TOUCH_DRIVER
+;  -D CALIBRATE_TOUCH=0
   -D LGFX_DRIVER=LGFX_INDICATOR
+  -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_INDICATOR.h\"
   -D VIEW_320x240
 ;	-D USE_DOUBLE_BUFFER
   -D USE_PACKET_API
