--- a/variants/t-deck/platformio.ini
+++ b/variants/t-deck/platformio.ini
@@ -63,6 +63,7 @@ build_flags =
 ;  -D CUSTOM_TOUCH_DRIVER
   -D CALIBRATE_TOUCH=0
   -D LGFX_DRIVER=LGFX_TDECK
+  -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_T_DECK.h\"
 ;  -D LVGL_DRIVER=LVGL_TDECK
 ;  -D LV_USE_ST7789=1
   -D VIEW_320x240
