--- a/variants/unphone/platformio.ini
+++ b/variants/unphone/platformio.ini
@@ -62,6 +62,7 @@ build_flags =
   -D USE_LOG_DEBUG
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
   -D LGFX_DRIVER=LGFX_UNPHONE_V9
+  -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_UNPHONE.h\"
   -D VIEW_320x240
   -D USE_PACKET_API
 	-I lib/device-ui/generated/ui_320x240
