T-Deck: increase LVGL memory size

--- a/variants/t-deck/platformio.ini
+++ b/variants/t-deck/platformio.ini
@@ -44,7 +44,7 @@ build_flags =
   -D HAS_SCREEN=0
   -D HAS_TFT=1
   -D USE_I2S_BUZZER
-  -D RAM_SIZE=1536
+  -D RAM_SIZE=2048
 	-D LV_LVGL_H_INCLUDE_SIMPLE
 	-D LV_CONF_INCLUDE_SIMPLE
 	-D LV_COMP_CONF_INCLUDE_SIMPLE
@@ -64,6 +64,7 @@ build_flags =
   -D LGFX_DRIVER=LGFX_TDECK
   -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_T_DECK.h\"
 ;  -D LVGL_DRIVER=LVGL_TDECK
+;  -D GFX_DRIVER_INC=\"graphics/LVGL/LVGL_T_DECK.h\"
 ;  -D LV_USE_ST7789=1
   -D VIEW_320x240
 ;	-D USE_DOUBLE_BUFFER
