feat: initial InkHUD support for Wireless Paper v1.1 and VM-E213

--- a/variants/heltec_vision_master_e213/platformio.ini
+++ b/variants/heltec_vision_master_e213/platformio.ini
@@ -5,6 +5,7 @@ build_flags =
   ${esp32s3_base.build_flags} 
   -Ivariants/heltec_vision_master_e213 
   -DHELTEC_VISION_MASTER_E213
+  -DUSE_EINK
   -DEINK_DISPLAY_MODEL=GxEPD2_213_FC1
   -DEINK_WIDTH=250
   -DEINK_HEIGHT=122
@@ -20,4 +21,23 @@ lib_deps =
   ${esp32s3_base.lib_deps}
   https://github.com/meshtastic/GxEPD2#b202ebfec6a4821e098cf7a625ba0f6f2400292d
   lewisxhe/PCF8563_Library@^1.0.1
+upload_speed = 115200
+
+; Using experimental InkHUD UI (work in progress)
+[env:heltec-vision-master-e213-inkhud]
+extends = esp32s3_base
+board = heltec_vision_master_e213
+board_level = extra
+build_src_filter = ${esp32_base.build_src_filter} +<../variants/heltec_vision_master_e213> ; Include nicheGraphics.h
+build_flags =
+  ${esp32s3_base.build_flags}
+  -I variants/heltec_vision_master_e213
+  -D HELTEC_VISION_MASTER_E213
+  -D MESHTASTIC_INCLUDE_NICHE_GRAPHICS ; Use NicheGraphics
+  -D MESHTASTIC_INCLUDE_INKHUD ; Use InkHUD (a NicheGraphics UI)
+  -D MESHTASTIC_EXCLUDE_SCREEN ; Suppress default Screen class
+  -D HAS_BUTTON=0 ; Suppress default ButtonThread
+lib_deps =
+  https://github.com/ZinggJM/GFX_Root#2.0.0 ; Used by InkHUD as a "slimmer" version of AdafruitGFX
+  ${esp32s3_base.lib_deps}
 upload_speed = 115200
