--- a/variants/heltec_wireless_paper/platformio.ini
+++ b/variants/heltec_wireless_paper/platformio.ini
@@ -1,3 +1,4 @@
+; Using the original screen class
 [env:heltec-wireless-paper]
 extends = esp32s3_base
 board = heltec_wifi_lora_32_V3
@@ -8,6 +9,7 @@ build_flags =
   -D EINK_DISPLAY_MODEL=GxEPD2_213_FC1
   -D EINK_WIDTH=250
   -D EINK_HEIGHT=122
+  -D USE_EINK
   -D USE_EINK_DYNAMICDISPLAY            ; Enable Dynamic EInk
   -D EINK_LIMIT_FASTREFRESH=10          ; How many consecutive fast-refreshes are permitted
   -D EINK_LIMIT_RATE_BACKGROUND_SEC=30  ; Minimum interval between BACKGROUND updates
@@ -20,4 +22,23 @@ lib_deps =
   ${esp32s3_base.lib_deps}
   https://github.com/meshtastic/GxEPD2#b202ebfec6a4821e098cf7a625ba0f6f2400292d
   lewisxhe/PCF8563_Library@^1.0.1
+upload_speed = 115200
+
+; Using experimental InkHUD UI (work in progress)
+[env:heltec-wireless-paper-inkhud]
+extends = esp32s3_base
+board = heltec_wifi_lora_32_V3
+board_level = extra
+build_src_filter = ${esp32_base.build_src_filter} +<../variants/heltec_wireless_paper> ; Include nicheGraphics.h
+build_flags =
+  ${esp32s3_base.build_flags}
+  -I variants/heltec_wireless_paper
+  -D HELTEC_WIRELESS_PAPER
+  -D MESHTASTIC_INCLUDE_NICHE_GRAPHICS ; Use NicheGraphics
+  -D MESHTASTIC_INCLUDE_INKHUD ; Use InkHUD (a NicheGraphics UI)
+  -D MESHTASTIC_EXCLUDE_SCREEN ; Suppress default Screen class
+  -D HAS_BUTTON=0 ; Suppress default ButtonThread
+lib_deps =
+  https://github.com/ZinggJM/GFX_Root#2.0.0 ; Used by InkHUD as a "slimmer" version of AdafruitGFX
+  ${esp32s3_base.lib_deps}
 upload_speed = 115200
