try implementing littlefs for stm32

--- a/arch/stm32/stm32.ini
+++ b/arch/stm32/stm32.ini
@@ -1,7 +1,7 @@
 [stm32_base]
 extends = arduino_base
 platform = ststm32
-platform_packages = platformio/framework-arduinoststm32@https://github.com/stm32duino/Arduino_Core_STM32.git#ea74156acd823b6d14739f389e6cdc648f8ee36e
+platform_packages = platformio/framework-arduinoststm32@https://github.com/stm32duino/Arduino_Core_STM32.git#2.9.0
 
 build_type = release
 
@@ -9,11 +9,12 @@ build_type = release
 
 build_flags = 
   ${arduino_base.build_flags}
+  -Wl,--undefined=vTaskSwitchContext
   -flto
   -Isrc/platform/stm32wl -g
   -DMESHTASTIC_MINIMIZE_BUILD
   -DMESHTASTIC_EXCLUDE_GPS
-  -DDEBUG_MUTE
+;  -DDEBUG_MUTE
 ;  -DVECT_TAB_OFFSET=0x08000000
   -DconfigUSE_CMSIS_RTOS_V2=1
 ;  -DSPI_MODE_0=SPI_MODE0
@@ -29,8 +30,8 @@ upload_protocol = stlink
 
 lib_deps =
   ${env.lib_deps}
-  charlesbaynham/OSFS@^1.2.3
-  jgromes/RadioLib@7.0.2
+  ${radiolib_base.lib_deps}
+  stm32duino/STM32duino FreeRTOS@^10.3.2
   https://github.com/caveman99/Crypto.git#f61ae26a53f7a2d0ba5511625b8bf8eff3a35d5e
 
 lib_ignore =
