add script to create HEX file for STM32 boards.

--- a/arch/stm32/stm32.ini
+++ b/arch/stm32/stm32.ini
@@ -2,7 +2,9 @@
 extends = arduino_base
 platform = ststm32
 platform_packages = platformio/framework-arduinoststm32@https://github.com/stm32duino/Arduino_Core_STM32.git#2.9.0
-
+extra_scripts =
+  ${env.extra_scripts}
+  post:extra_scripts/extra_stm32.py
 build_type = release
 
 ;board_build.flash_offset = 0x08000000
