--- a/platformio.ini
+++ b/platformio.ini
@@ -1,24 +1,25 @@
 ; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = tbeam
-
-extra_configs =
+default_envs = tbeam0_7
+extra_configs = 
 	arch/*/*.ini
 	variants/*/platformio.ini
 description = Meshtastic
 
 [env]
-test_build_src = true
+test_build_src = yes
 extra_scripts = bin/platformio-custom.py
-; note: we add src to our include search path so that lmic_project_config can override
-; note: TINYGPS_OPTION_NO_CUSTOM_FIELDS is VERY important.  We don't use custom fields and somewhere in that pile
-; of code is a heap corruption bug!
-; FIXME: fix lib/BluetoothOTA dependency back on src/ so we can remove -Isrc
-; The Radiolib stuff will speed up building considerably. Exclud all the stuff we dont need.
-build_flags = -Wno-missing-field-initializers
-
+build_flags = 
+	-Wno-missing-field-initializers
 	-Wno-format
 	-Isrc -Isrc/mesh -Isrc/mesh/generated -Isrc/gps -Isrc/buzz -Wl,-Map,"${platformio.build_dir}"/output.map
 	-DUSE_THREAD_NAMES
@@ -47,13 +48,10 @@ build_flags = -Wno-missing-field-initializers
 	-DMESHTASTIC_EXCLUDE_DROPZONE=1
 	-DMESHTASTIC_EXCLUDE_REMOTEHARDWARE=1
 	-DMESHTASTIC_EXCLUDE_HEALTH_TELEMETRY=1
-  	-DMESHTASTIC_EXCLUDE_POWERSTRESS=1 ; exclude power stress test module from main firmware
-        #-DBUILD_EPOCH=$UNIX_TIME
-        #-D OLED_PL=1
-
+	-DMESHTASTIC_EXCLUDE_POWERSTRESS=1
 monitor_speed = 115200
 monitor_filters = direct
-lib_deps =
+lib_deps = 
 	https://github.com/meshtastic/esp8266-oled-ssd1306.git#e16cee124fe26490cb14880c679321ad8ac89c95
 	mathertel/OneButton@2.6.1
 	https://github.com/meshtastic/arduino-fsm.git#7db3702bf0cfe97b783d6c72595e3f38e0b19159
@@ -61,39 +59,33 @@ lib_deps =
 	https://github.com/meshtastic/ArduinoThread.git#1ae8778c85d0a2a729f989e0b1e7d7c4dc84eef0
 	nanopb/Nanopb@0.4.9
 	erriez/ErriezCRC32@1.0.1
-
-; Used for the code analysis in PIO Home / Inspect
 check_tool = cppcheck
 check_skip_packages = yes
-check_flags =
+check_flags = 
 	-DAPP_VERSION=1.0.0
 	--suppressions-list=suppressions.txt
 	--inline-suppr
 
-; Common settings for conventional (non Portduino) Arduino targets
 [arduino_base]
 framework = arduino
-lib_deps =
+lib_deps = 
 	${env.lib_deps}
 	end2endzone/NonBlockingRTTTL@1.3.0
 build_flags = ${env.build_flags} -Os
 build_src_filter = ${env.build_src_filter} -<platform/portduino/>
 
-; Common libs for communicating over TCP/IP networks such as MQTT
 [networking_base]
-lib_deps =
+lib_deps = 
 	knolleary/PubSubClient@2.8
 	arduino-libraries/NTPClient@3.1.0
 	arcao/Syslog@2.0.0
 
 [radiolib_base]
-lib_deps =
+lib_deps = 
 	jgromes/RadioLib@7.1.2
 
-; Common libs for environmental measurements in telemetry module
-; (not included in native / portduino)
 [environmental_base]
-lib_deps =
+lib_deps = 
 	adafruit/Adafruit BusIO@1.16.2
 	adafruit/Adafruit Unified Sensor@1.1.14
 	adafruit/Adafruit BMP280 Library@2.6.8
@@ -128,6 +120,10 @@ lib_deps =
 	https://github.com/meshtastic/DFRobot_LarkWeatherStation#4de3a9cadef0f6a5220a8a906cf9775b02b0040d
 	https://github.com/DFRobot/DFRobot_RainfallSensor#38fea5e02b40a5430be6dab39a99a6f6347d667e
 	robtillaart/INA226@0.6.0
-
-	; Health Sensor Libraries
+	
 	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@1.1.2
+
+[env:port]
+upload_port = /dev/ttyUSB0
+
+[env:env1]
