--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Absolute path to the local meshtastic config.yaml file
-CONFIG_PATH=/path/to/meshtastic/config.yaml
+CONFIG_PATH=/home/roberto/git/firmware/config.yaml
 # USB device to passthrough (`lsusb -t`: look for `ch341`)
-USB_DEVICE=/dev/bus/usb/001/037
+USB_DEVICE=/dev/ttyUSB0
