--- a/variants/seeed-sensecap-indicator/platformio.ini
+++ b/variants/seeed-sensecap-indicator/platformio.ini
@@ -32,6 +32,7 @@ lib_deps = ${esp32s3_base.lib_deps}
 [env:seeed-sensecap-indicator-tft]
 extends = env:seeed-sensecap-indicator
 board_level = main
+upload_speed = 460800
 board_build.partitions = default_8MB.csv ; must be here for some reason, board.json is not enough !?
 
 build_flags =
@@ -82,4 +83,3 @@ build_src_filter =
 lib_deps =
   ${env:seeed-sensecap-indicator.lib_deps}
   https://github.com/bitbank2/bb_captouch.git#8f2f06462ff597847921739376a299db93612417 ; alternative touch library supporting FT6x36
-
