--- a/variants/unphone/platformio.ini
+++ b/variants/unphone/platformio.ini
@@ -32,6 +32,7 @@ lib_deps = ${esp32s3_base.lib_deps}
 
 [env:unphone-tft]
 extends = env:unphone
+board_level = extra
 board_build.partitions = default_8MB.csv
 build_flags =
   ${env:unphone.build_flags}
