fixed Indicator touch issue (causing IO expander issues), added more RAM

--- a/variants/seeed-sensecap-indicator/platformio.ini
+++ b/variants/seeed-sensecap-indicator/platformio.ini
@@ -52,7 +52,7 @@ build_flags =
   -D HAS_TFT=1
   -D DISPLAY_SET_RESOLUTION
   -D USE_I2S_BUZZER
-  -D RAM_SIZE=1024
+  -D RAM_SIZE=3072
 	-D LV_LVGL_H_INCLUDE_SIMPLE
 	-D LV_CONF_INCLUDE_SIMPLE
 	-D LV_COMP_CONF_INCLUDE_SIMPLE
@@ -63,7 +63,7 @@ build_flags =
   -D LV_USE_LOG=0
   -D USE_LOG_DEBUG
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
-;  -D CUSTOM_TOUCH_DRIVER
+  -D CUSTOM_TOUCH_DRIVER
 ;  -D CALIBRATE_TOUCH=0
   -D LGFX_DRIVER=LGFX_INDICATOR
   -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_INDICATOR.h\"
