refactor: use a common pio base config Easier to make any future PlatformIO config changes

--- a/variants/heltec_vision_master_e290/platformio.ini
+++ b/variants/heltec_vision_master_e290/platformio.ini
@@ -23,20 +23,20 @@ lib_deps =
 upload_speed = 115200
 
 ; Using experimental InkHUD UI (work in progress)
+[platformio]
+extra_configs = src/graphics/niche/InkHUD/PlatformioConfig.ini
 [env:heltec-vision-master-e290-inkhud]
-extends = esp32s3_base
+extends = esp32s3_base, inkhud
 board = heltec_vision_master_e290
-board_level = extra
-build_src_filter = ${esp32_base.build_src_filter} +<../variants/heltec_vision_master_e290> ; Include nicheGraphics.h
+build_src_filter = 
+  ${esp32_base.build_src_filter} 
+  ${inkhud.build_src_filter}
 build_flags = 
-  ${esp32s3_base.build_flags} 
+  ${esp32s3_base.build_flags}
+  ${inkhud.build_flags}
   -I variants/heltec_vision_master_e290
   -D HELTEC_VISION_MASTER_E290
-  -D MESHTASTIC_INCLUDE_NICHE_GRAPHICS ; Use NicheGraphics
-  -D MESHTASTIC_INCLUDE_INKHUD ; Use InkHUD (a NicheGraphics UI)
-  -D MESHTASTIC_EXCLUDE_SCREEN ; Suppress default Screen class
-  -D HAS_BUTTON=0 ; Suppress default ButtonThread
 lib_deps =
-  https://github.com/ZinggJM/GFX_Root#2.0.0 ; Used by InkHUD as a "slimmer" version of AdafruitGFX
+  ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot intead of AdafruitGFX
   ${esp32s3_base.lib_deps}
 upload_speed = 115200
