--- a/variants/t-echo/platformio.ini
+++ b/variants/t-echo/platformio.ini
@@ -25,23 +25,23 @@ lib_deps =
 ;upload_protocol = fs
 
 ; Using experimental InkHUD UI (work in progress)
+[platformio]
+extra_configs = src/graphics/niche/InkHUD/PlatformioConfig.ini
 [env:t-echo-inkhud]
-extends = nrf52840_base
+extends = nrf52840_base, inkhud
 board = t-echo
-board_level = extra
 board_check = true
 debug_tool = jlink
 build_flags = 
-  ${nrf52840_base.build_flags} 
+  ${nrf52840_base.build_flags}
+  ${inkhud.build_flags}
   -I variants/t-echo
   -L "${platformio.libdeps_dir}/${this.__env__}/bsec2/src/cortex-m4/fpv4-sp-d16-hard"
-  -D MESHTASTIC_INCLUDE_NICHE_GRAPHICS ; Use NicheGraphics
-  -D MESHTASTIC_INCLUDE_INKHUD ; Use InkHUD (a NicheGraphics UI)
-  -D MESHTASTIC_EXCLUDE_SCREEN ; Suppress default Screen class
-  -D HAS_BUTTON=0 ; Suppress default ButtonThread
-
-build_src_filter = ${nrf52_base.build_src_filter} +<../variants/t-echo>
+build_src_filter = 
+  ${nrf52_base.build_src_filter} 
+  ${inkhud.build_src_filter}
+  +<../variants/t-echo>
 lib_deps = 
-  https://github.com/ZinggJM/GFX_Root#2.0.0 ; Used by InkHUD as a "slimmer" version of AdafruitGFX
+  ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot intead of AdafruitGFX
   ${nrf52840_base.lib_deps}
   lewisxhe/PCF8563_Library@^1.0.1
