--- a/variants/heltec_wireless_paper/platformio.ini
+++ b/variants/heltec_wireless_paper/platformio.ini
@@ -21,20 +21,21 @@ lib_deps =
 upload_speed = 115200
 
 ; Using experimental InkHUD UI (work in progress)
+[platformio]
+extra_configs = src/graphics/niche/InkHUD/PlatformioConfig.ini
 [env:heltec-wireless-paper-inkhud]
-extends = esp32s3_base
+extends = esp32s3_base, inkhud
 board = heltec_wifi_lora_32_V3
 board_level = extra
-build_src_filter = ${esp32_base.build_src_filter} +<../variants/heltec_wireless_paper> ; Include nicheGraphics.h
+build_src_filter =
+  ${esp32_base.build_src_filter} 
+  ${inkhud.build_src_filter}
 build_flags =
   ${esp32s3_base.build_flags}
+  ${inkhud.build_flags}
   -I variants/heltec_wireless_paper
   -D HELTEC_WIRELESS_PAPER
-  -D MESHTASTIC_INCLUDE_NICHE_GRAPHICS ; Use NicheGraphics
-  -D MESHTASTIC_INCLUDE_INKHUD ; Use InkHUD (a NicheGraphics UI)
-  -D MESHTASTIC_EXCLUDE_SCREEN ; Suppress default Screen class
-  -D HAS_BUTTON=0 ; Suppress default ButtonThread
 lib_deps =
-  https://github.com/ZinggJM/GFX_Root#2.0.0 ; Used by InkHUD as a "slimmer" version of AdafruitGFX
+  ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot intead of AdafruitGFX
   ${esp32s3_base.lib_deps}
 upload_speed = 115200
