refactor: Heltec VM-E290 installDefaultConfig

--- a/variants/heltec_vision_master_e290/platformio.ini
+++ b/variants/heltec_vision_master_e290/platformio.ini
@@ -4,6 +4,7 @@ board = heltec_vision_master_e290
 build_flags = 
   ${esp32s3_base.build_flags} 
   -I variants/heltec_vision_master_e290
+  -D DISPLAY_FLIP_SCREEN ; Orient so the LoRa antenna faces up
   -D HELTEC_VISION_MASTER_E290
   -D BUTTON_CLICK_MS=200
   -D EINK_DISPLAY_MODEL=GxEPD2_290_BN8
