--- a/variants/rpipico2w/platformio.ini
+++ b/variants/rpipico2w/platformio.ini
@@ -15,7 +15,7 @@ debug_init_cmds =
 # add our variants files to the include and src paths
 build_flags = ${rp2350_base.build_flags} 
   -DRPI_PICO2
-  -Ivariants/rpipico2
+  -Ivariants/rpipico2w
 #  -DDEBUG_RP2040_PORT=Serial
   -DHW_SPI1_DEVICE
   -DARDUINO_RASPBERRY_PI_PICO_2W
