Increase `MAX_THREADS` for InkHUD variants with WiFi

--- a/variants/heltec_wireless_paper/platformio.ini
+++ b/variants/heltec_wireless_paper/platformio.ini
@@ -34,6 +34,7 @@ build_flags =
   ${inkhud.build_flags}
   -I variants/heltec_wireless_paper
   -D HELTEC_WIRELESS_PAPER
+  -D MAX_THREADS=40
 lib_deps =
   ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot intead of AdafruitGFX
   ${esp32s3_base.lib_deps}
