--- a/variants/heltec_vision_master_e290/platformio.ini
+++ b/variants/heltec_vision_master_e290/platformio.ini
@@ -37,6 +37,7 @@ build_flags =
   ${inkhud.build_flags}
   -I variants/heltec_vision_master_e290
   -D HELTEC_VISION_MASTER_E290
+  -D MAX_THREADS=40
 lib_deps =
   ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot intead of AdafruitGFX
   ${esp32s3_base.lib_deps}
