remove FreeRTOS dependency from STM32 build; disable debugging to preserve FLASH space
LittleFS mutex routines are stubs and malloc()/free() are the stdlib
versions

--- a/arch/stm32/stm32.ini
+++ b/arch/stm32/stm32.ini
@@ -9,7 +9,6 @@ build_type = release
 
 build_flags =
   ${arduino_base.build_flags}
-  -Wl,--undefined=vTaskSwitchContext
   -flto
   -Isrc/platform/stm32wl -g
   -DMESHTASTIC_EXCLUDE_ENVIRONMENTAL_SENSOR
@@ -21,7 +20,7 @@ build_flags =
   -DMESHTASTIC_EXCLUDE_BLUETOOTH
   -DMESHTASTIC_EXCLUDE_PKI
   -DMESHTASTIC_EXCLUDE_GPS
-  -DconfigUSE_CMSIS_RTOS_V2=1
+  -DDEBUG_MUTE
   -fmerge-all-constants
   -ffunction-sections
   -fdata-sections
@@ -31,11 +30,11 @@ build_src_filter =
 
 board_upload.offset_address = 0x08000000
 upload_protocol = stlink
+debug_tool = stlink
 
 lib_deps =
   ${env.lib_deps}
   ${radiolib_base.lib_deps}
-  stm32duino/STM32duino FreeRTOS@^10.3.2
   https://github.com/caveman99/Crypto.git#eae9c768054118a9399690f8af202853d1ae8516
 
 lib_ignore =
