--- a/variants/wio-e5/platformio.ini
+++ b/variants/wio-e5/platformio.ini
@@ -21,6 +21,8 @@ build_flags =
   -DMESHTASTIC_EXCLUDE_SCREEN=1
   -DMESHTASTIC_EXCLUDE_MQTT=1
   -DMESHTASTIC_EXCLUDE_POWERMON=1
-  -DPIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
+  -DMESHTASTIC_EXCLUDE_PKI
+  ;-DPIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
+  ;-DCFG_DEBUG
 
 upload_port = stlink
