--- a/arch/rp2xx0/rp2350.ini
+++ b/arch/rp2xx0/rp2350.ini
@@ -2,7 +2,7 @@
 [rp2350_base]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git#76ecf3c7e9dd4503af0331154c4ca1cddc4b03e5 ; For arduino-pico >= 4.4.3
 extends = arduino_base
-platform_packages = framework-arduinopico@https://github.com/earlephilhower/arduino-pico.git#b506c010f7766cfb181c8da6db93cb8d554460f6 ; 4.4.3
+platform_packages = framework-arduinopico@https://github.com/earlephilhower/arduino-pico.git#4.4.3
 
 board_build.core = earlephilhower
 board_build.filesystem_size = 0.5m
