--- a/variants/heltec_vision_master_e213/platformio.ini
+++ b/variants/heltec_vision_master_e213/platformio.ini
@@ -35,6 +35,6 @@ build_flags =
   -D HELTEC_VISION_MASTER_E213
   -D MAX_THREADS=40
 lib_deps =
-  ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot intead of AdafruitGFX
+  ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot instead of AdafruitGFX
   ${esp32s3_base.lib_deps}
 upload_speed = 115200
