--- a/variants/heltec_vision_master_e290/platformio.ini
+++ b/variants/heltec_vision_master_e290/platformio.ini
@@ -39,6 +39,6 @@ build_flags =
   -D HELTEC_VISION_MASTER_E290
   -D MAX_THREADS=40
 lib_deps =
-  ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot intead of AdafruitGFX
+  ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot instead of AdafruitGFX
   ${esp32s3_base.lib_deps}
 upload_speed = 115200
