--- a/variants/heltec_wireless_paper/platformio.ini
+++ b/variants/heltec_wireless_paper/platformio.ini
@@ -36,6 +36,6 @@ build_flags =
   -D HELTEC_WIRELESS_PAPER
   -D MAX_THREADS=40
 lib_deps =
-  ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot intead of AdafruitGFX
+  ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot instead of AdafruitGFX
   ${esp32s3_base.lib_deps}
 upload_speed = 115200
