--- a/platformio.ini
+++ b/platformio.ini
@@ -127,7 +127,7 @@ lib_deps =
 	dfrobot/DFRobot_RTU@1.0.3
 	https://github.com/meshtastic/DFRobot_LarkWeatherStation#4de3a9cadef0f6a5220a8a906cf9775b02b0040d
 	https://github.com/DFRobot/DFRobot_RainfallSensor#38fea5e02b40a5430be6dab39a99a6f6347d667e
-	robtillaart/INA226@0.6.0
+	snowhalationmkii/INA226
 
 	; Health Sensor Libraries
 	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@1.1.2
