--- a/variants/portduino/platformio.ini
+++ b/variants/portduino/platformio.ini
@@ -14,6 +14,9 @@ extends = native_base
 build_flags = ${native_base.build_flags}
   !pkg-config --libs libulfius --silence-errors || :
   !pkg-config --libs openssl --silence-errors || :
+; Exclude the `device-ui`
+build_src_filter = ${native_base.build_src_filter}
+  -<../lib/device-ui>
 
 [env:native-tft]
 extends = native_base
