--- a/platformio.ini
+++ b/platformio.ini
@@ -92,6 +92,10 @@ lib_deps =
 lib_deps =
 	jgromes/RadioLib@7.1.2
 
+[device-ui_base]
+lib_deps =
+	https://github.com/meshtastic/device-ui.git#8c3183e177a1d6452ce12b4f328bd3357bf7e21b
+
 ; Common libs for environmental measurements in telemetry module
 ; (not included in native / portduino)
 [environmental_base]
