refactor: god class Divide the behavior from the old WindowManager class into several subclasses which each have a clear role.

--- a/variants/t-echo/platformio.ini
+++ b/variants/t-echo/platformio.ini
@@ -24,7 +24,7 @@ lib_deps =
   lewisxhe/PCF8563_Library@^1.0.1
 ;upload_protocol = fs
 
-; Using experimental InkHUD UI (work in progress)
+; Using InkHUD UI
 [platformio]
 extra_configs = src/graphics/niche/InkHUD/PlatformioConfig.ini
 [env:t-echo-inkhud]
