--- a/variants/heltec_vision_master_e213/platformio.ini
+++ b/variants/heltec_vision_master_e213/platformio.ini
@@ -19,7 +19,7 @@ lib_deps =
   lewisxhe/PCF8563_Library@^1.0.1
 upload_speed = 115200
 
-; Using experimental InkHUD UI (work in progress)
+; Using InkHUD UI
 [platformio]
 extra_configs = src/graphics/niche/InkHUD/PlatformioConfig.ini
 [env:heltec-vision-master-e213-inkhud]
@@ -33,8 +33,8 @@ build_flags =
   ${inkhud.build_flags}
   -I variants/heltec_vision_master_e213
   -D HELTEC_VISION_MASTER_E213
-  -D MAX_THREADS=40
+  -D MAX_THREADS=40 ; Required if used with WiFi
 lib_deps =
   ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot instead of AdafruitGFX
   ${esp32s3_base.lib_deps}
-upload_speed = 115200
+upload_speed = 921600
