--- a/arch/stm32/stm32.ini
+++ b/arch/stm32/stm32.ini
@@ -20,7 +20,7 @@ build_flags =
   -DMESHTASTIC_EXCLUDE_MQTT
   -DMESHTASTIC_EXCLUDE_BLUETOOTH
   -DMESHTASTIC_EXCLUDE_GPS
-  -DDEBUG_MUTE
+  ;-DDEBUG_MUTE
   -fmerge-all-constants
   -ffunction-sections
   -fdata-sections
