--- a/variants/rak11310/platformio.ini
+++ b/variants/rak11310/platformio.ini
@@ -11,11 +11,13 @@ build_flags = ${rp2040_base.build_flags}
   -DRAK11310
   -Ivariants/rak11310
   -DDEBUG_RP2040_PORT=Serial
+  -DRV3028_RTC=0x52
   -L "${platformio.libdeps_dir}/${this.__env__}/bsec2/src/cortex-m0plus"
 build_src_filter = ${rp2040_base.build_src_filter} +<../variants/rak11310> +<mesh/eth/> +<mesh/api/> +<mqtt/>
 lib_deps =
   ${rp2040_base.lib_deps}
   ${networking_base.lib_deps}
+  melopero/Melopero RV3028@^1.1.0
   https://github.com/RAKWireless/RAK13800-W5100S.git#1.0.2
 debug_build_flags = ${rp2040_base.build_flags}, -g
 debug_tool = cmsis-dap ; for e.g. Picotool
