--- a/variants/seeed_xiao_esp32c6/platformio.ini
+++ b/variants/seeed_xiao_esp32c6/platformio.ini
@@ -1,26 +1,25 @@
-[env:tlora-c6]
+[env:seeed-xiao-esp32c6]
 extends = esp32c6_base
 platform = https://github.com/pioarduino/platform-espressif32.git#f5d602fa7b4b778604306a149fe474723e79be2d
 framework = arduino, espidf
 board = esp32-c6-devkitm-1
+board_check = true
 board_build.partitions = partition-table.csv
 upload_protocol = esptool
 upload_speed = 921600
 monitor_speed = 460800
 monitor_filters = esp32_c3_exception_decoder
 extra_scripts = pre:bin/platformio-custom.py
-
 build_unflags =
   -D HAS_BLUETOOTH
   -D MESHTASTIC_EXCLUDE_BLUETOOTH
   -D HAS_WIFI
-
 build_flags =
   ${esp32c6_base.build_flags}
-  -D TLORA_C6
-  -I variants/tlora_c6
-  -DARDUINO_USB_CDC_ON_BOOT=1
-  -DARDUINO_USB_MODE=1
+  -D PRIVATE_HW
+  -I variants/seeed_xiao_esp32c6
+  -D ARDUINO_USB_CDC_ON_BOOT=1
+  -D ARDUINO_USB_MODE=1
   -L "${platformio.libdeps_dir}/${this.__env__}/bsec2/src/esp32c3"
   -D HAS_BLUETOOTH=1
   -D MESHTASTIC_EXCLUDE_WEBSERVER
