--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,11 @@ release/
 /compile_commands.json
 src/mesh/raspihttp/certificate.pem
 src/mesh/raspihttp/private_key.pem
+
+managed_components
+dependencies.lock
+
+log_*
+sdkconfig
+sdkconfig.*
+!sdkconfig.defaults
