environment: add DPS310 high-accuracy barometer (#6237)
* dps310: initial scan support

* dps310 sensor support

* new protobufs

* new protobufs

* address cr

---------

Co-authored-by: Ben Meadors <benmmeadors@gmail.com>

--- a/platformio.ini
+++ b/platformio.ini
@@ -106,6 +106,7 @@ lib_deps =
 	adafruit/Adafruit BMP085 Library@1.2.4
 	adafruit/Adafruit BME280 Library@2.2.4
 	adafruit/Adafruit BMP3XX Library@2.1.5
+	adafruit/Adafruit DPS310@1.1.5
 	adafruit/Adafruit MCP9808 Library@2.0.2
 	adafruit/Adafruit INA260 Library@1.5.2
 	adafruit/Adafruit INA219@1.2.3
