use proper version for board, also use a better way to flush the GPS buffer.

--- a/variants/t-eth-elite/platformio.ini
+++ b/variants/t-eth-elite/platformio.ini
@@ -4,7 +4,7 @@ board = esp32s3box
 board_check = true
 build_flags = 
   ${esp32s3_base.build_flags}
-  -D PRIVATE_HW
+  -D T_ETH_ELITE
   -I variants/t-eth-elite
   -DGPS_POWER_TOGGLE ; comment this line to disable triple press function on the user button to turn off gps entirely.
 
