--- a/variants/elecrow_panel/platformio.ini
+++ b/variants/elecrow_panel/platformio.ini
@@ -16,7 +16,6 @@ build_flags = ${esp32s3_base.build_flags}
   -DRADIOLIB_DEBUG_BASIC=0
   -DRADIOLIB_VERBOSE_ASSERT=0
   -DRADIOLIB_SPI_PARANOID=0
-  -DUSE_ARDUINO_HAL_GPIO
 
 lib_deps = ${esp32s3_base.lib_deps}
   earlephilhower/ESP8266Audio@^1.9.9
@@ -33,12 +32,11 @@ build_flags =
   ${crowpanel_base.build_flags} -Os
   -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
   -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
-  -D MESHTASTIC_EXCLUDE_BLUETOOTH=1
-  -D MESHTASTIC_EXCLUDE_SCREEN=1
-  -D MESHTASTIC_EXCLUDE_ENVIRONMENTAL_SENSOR=1
   -D MESHTASTIC_EXCLUDE_WEBSERVER=1
   -D MESHTASTIC_EXCLUDE_SERIAL=1
   -D MESHTASTIC_EXCLUDE_SOCKETAPI=1
+  -D MESHTASTIC_EXCLUDE_SCREEN=1
+  -D MESHTASTIC_EXCLUDE_ENVIRONMENTAL_SENSOR=1
 ;  -D INPUTDRIVER_BUTTON_TYPE=0
   -D HAS_TELEMETRY=0
   -D CONFIG_DISABLE_HAL_LOCKS=1
@@ -47,6 +45,7 @@ build_flags =
   -D HAS_TFT=1
 ;  -D DISPLAY_SET_RESOLUTION
 ;  -D USE_I2S_BUZZER
+;  -D USE_PIN_BUZZER
   -D RAM_SIZE=6144
 	-D LV_LVGL_H_INCLUDE_SIMPLE
 	-D LV_CONF_INCLUDE_SIMPLE
@@ -56,18 +55,17 @@ build_flags =
   -D LV_USE_PERF_MONITOR=0
   -D LV_USE_MEM_MONITOR=0
   -D LV_USE_LOG=0
+  -D LV_BUILD_TEST=0
   -D USE_LOG_DEBUG
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
-;  -D CUSTOM_TOUCH_DRIVER
-;  -D CALIBRATE_TOUCH=0
-;	-D USE_DOUBLE_BUFFER
   -D USE_PACKET_API
 
 build_src_filter =
   ${crowpanel_base.build_src_filter}
-  +<../lib/device-ui/resources>
-  +<../lib/device-ui/locale>
-  +<../lib/device-ui/source>
+
+lib_deps =
+  ${crowpanel_base.lib_deps}
+  ${device-ui_base.lib_deps}
 
 # 2.4 inch 320x240 IPS ST7789
 [env:elecrow-24]
@@ -80,6 +78,37 @@ build_flags =
     -D TFT_OFFSET_X=0
     -D TFT_OFFSET_Y=0
     -D TFT_BUSY=-1
+
+[env:elecrow-24-tft]
+extends = crowpanel_base_tft
+
+build_flags =
+  ${crowpanel_base_tft.build_flags}
+  -D TFT_HEIGHT=320 ; needed in variant.h
+  -D HAS_SDCARD
+  -D USE_I2S_BUZZER
+  -D LGFX_DRIVER_TEMPLATE
+  -D LGFX_DRIVER=LGFX_GENERIC
+  -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_GENERIC.h\"
+  -D SPI_FREQUENCY=80000000
+  -D LGFX_SCREEN_WIDTH=240
+  -D LGFX_SCREEN_HEIGHT=320
+  -D LGFX_PANEL=ST7789
+  -D LGFX_ROTATION=1
+  -D LGFX_PIN_SCK=42
+  -D LGFX_PIN_MOSI=39
+  -D LGFX_PIN_DC=41
+  -D LGFX_PIN_CS=40
+  -D LGFX_PIN_BL=38
+  -D LGFX_TOUCH=FT5x06
+  -D LGFX_TOUCH_I2C_ADDR=0x38
+  -D LGFX_TOUCH_I2C_SDA=15
+  -D LGFX_TOUCH_I2C_SCL=16
+  -D LGFX_TOUCH_INT=47
+  -D LGFX_TOUCH_RST=48
+  -D LGFX_TOUCH_ROTATION=0
+  -D VIEW_320x240
+  -D MAP_FULL_REDRAW
 
 # 2.8 inch 320x480 IPS ST7789
 [env:elecrow-28]
