Elecrow: TFT uses SPI2_HOST (otherwise LoRa does not work on HSPI)

--- a/variants/elecrow_panel/platformio.ini
+++ b/variants/elecrow_panel/platformio.ini
@@ -94,6 +94,7 @@ build_flags =
   -D LGFX_SCREEN_HEIGHT=320
   -D LGFX_PANEL=ST7789
   -D LGFX_ROTATION=1
+  -D LGFX_CFG_HOST=SPI2_HOST
   -D LGFX_PIN_SCK=42
   -D LGFX_PIN_MOSI=39
   -D LGFX_PIN_DC=41
@@ -139,6 +140,7 @@ build_flags =
   -D LGFX_SCREEN_HEIGHT=480
   -D LGFX_PANEL=ILI9488
   -D LGFX_ROTATION=0
+  -D LGFX_CFG_HOST=SPI2_HOST
   -D LGFX_PIN_SCK=42
   -D LGFX_PIN_MOSI=39
   -D LGFX_PIN_DC=41
