Upgrade to arduino-esp32 3.0.4

--- a/arch/esp32/esp32.ini
+++ b/arch/esp32/esp32.ini
@@ -2,7 +2,13 @@
 [esp32_base]
 extends = arduino_base
 custom_esp32_kind = esp32
-platform = platformio/espressif32@6.10.0
+platform = https://github.com/platformio/platform-espressif32.git
+platform_packages =
+  platformio/framework-arduinoespressif32@https://github.com/espressif/arduino-esp32/releases/download/3.0.4/esp32-3.0.4.zip
+  platformio/framework-arduinoespressif32-libs@https://github.com/mskvortsov/meshtastic-esp32-arduino-libs/releases/download/20240819/esp32-arduino-libs.zip
+  espressif/toolchain-riscv32-esp@12.2.0
+  espressif/toolchain-xtensa-esp32s3@12.2.0
+  espressif/toolchain-xtensa-esp32@12.2.0
 
 build_src_filter = 
   ${arduino_base.build_src_filter} -<platform/nrf52/> -<platform/stm32wl> -<platform/rp2xx0> -<mesh/eth/> -<mesh/raspihttp>
@@ -19,7 +25,7 @@ board_build.filesystem = littlefs
 build_unflags = -fno-lto
 build_flags =
   ${arduino_base.build_flags}
-  -flto
+  -flto=auto
   -Wall
   -Wextra
   -Isrc/platform/esp32
@@ -39,13 +45,14 @@ build_flags =
   -DLIBPAX_BLE
   -DHAS_UDP_MULTICAST=1
   ;-DDEBUG_HEAP
+  -include src/platform/esp32/quirks.h
 
 lib_deps =
   ${arduino_base.lib_deps}
   ${networking_base.lib_deps}
   ${environmental_base.lib_deps}
   ${radiolib_base.lib_deps}
-  https://github.com/meshtastic/esp32_https_server.git#23665b3adc080a311dcbb586ed5941b5f94d6ea2
+  https://github.com/meshtastic/esp32_https_server.git#896f1771ceb5979987a0b41028bf1b4e7aad419b
   h2zero/NimBLE-Arduino@^1.4.3
   https://github.com/dbinfrago/libpax.git#3cdc0371c375676a97967547f4065607d4c53fd1
   lewisxhe/XPowersLib@^0.2.7
