--- a/arch/esp32/esp32s3.ini
+++ b/arch/esp32/esp32s3.ini
@@ -4,3 +4,7 @@ custom_esp32_kind = esp32s3
 
 monitor_speed = 115200
 
+# Work around BLE initialization failure
+build_flags =
+  ${esp32_base.build_flags}
+  -DCONFIG_BT_NIMBLE_PINNED_TO_CORE=1
