--- a/variants/bpi_picow_esp32_s3/platformio.ini
+++ b/variants/bpi_picow_esp32_s3/platformio.ini
@@ -11,4 +11,4 @@ lib_deps =
   ${esp32_base.lib_deps}
   caveman99/ESP32 Codec2@^1.0.1
 build_flags = 
-  ${esp32_base.build_flags} -D PRIVATE_HW -I variants/bpi_picow_esp32_s3
+  ${esp32s3_base.build_flags} -D PRIVATE_HW -I variants/bpi_picow_esp32_s3
