--- a/variants/my_esp32s3_diy_eink/platformio.ini
+++ b/variants/my_esp32s3_diy_eink/platformio.ini
@@ -19,7 +19,7 @@ build_unflags =
   -DARDUINO_USB_MODE=1
 build_flags = 
   ;${esp32_base.build_flags} -D MY_ESP32S3_DIY -I variants/my_esp32s3_diy_eink
-  ${esp32_base.build_flags} -D PRIVATE_HW -I variants/my_esp32s3_diy_eink
+  ${esp32s3_base.build_flags} -D PRIVATE_HW -I variants/my_esp32s3_diy_eink
   -Dmy
   -DEINK_DISPLAY_MODEL=GxEPD2_290_T5D
   -DEINK_WIDTH=296
