--- a/variants/my_esp32s3_diy_oled/platformio.ini
+++ b/variants/my_esp32s3_diy_oled/platformio.ini
@@ -18,7 +18,7 @@ build_unflags =
   -DARDUINO_USB_MODE=1
 build_flags = 
   ;${esp32_base.build_flags} -D MY_ESP32S3_DIY -I variants/my_esp32s3_diy_oled
-  ${esp32_base.build_flags} -D PRIVATE_HW -I variants/my_esp32s3_diy_oled
+  ${esp32s3_base.build_flags} -D PRIVATE_HW -I variants/my_esp32s3_diy_oled
   -DBOARD_HAS_PSRAM
   -mfix-esp32-psram-cache-issue
   -DARDUINO_USB_MODE=0
