Fix seeed-sensecap-indicator[-tft] build

--- a/variants/seeed-sensecap-indicator/platformio.ini
+++ b/variants/seeed-sensecap-indicator/platformio.ini
@@ -1,8 +1,9 @@
 ; Seeed Studio SenseCAP Indicator
 [env:seeed-sensecap-indicator]
 extends = esp32s3_base
-platform_packages =
-    platformio/framework-arduinoespressif32 @ https://github.com/mverch67/arduino-esp32.git#aef7fef6de3329ed6f75512d46d63bba12b09bb5 ; add_tca9535 (based on 2.0.16)
+; XXX TODO Check whether the issue being addressed here still exists for arduino-esp32 v3
+;platform_packages =
+;    platformio/framework-arduinoespressif32 @ https://github.com/mverch67/arduino-esp32.git#aef7fef6de3329ed6f75512d46d63bba12b09bb5 ; add_tca9535 (based on 2.0.16)
 
 board = seeed-sensecap-indicator
 board_check = true
