Switch to pioarduino/platform-espressif32

--- a/arch/esp32/base.ini
+++ b/arch/esp32/base.ini
@@ -1,14 +1,7 @@
 ; Common settings for ESP targes, mixin with extends = esp32_base
-[esp32_base]
+[esp32_abstract]
 extends = arduino_base
-custom_esp32_kind = esp32
-platform = https://github.com/platformio/platform-espressif32.git
-platform_packages =
-  platformio/framework-arduinoespressif32@https://github.com/espressif/arduino-esp32/releases/download/3.0.4/esp32-3.0.4.zip
-  platformio/framework-arduinoespressif32-libs@https://github.com/mskvortsov/meshtastic-esp32-arduino-libs/releases/download/20240819/esp32-arduino-libs.zip
-  espressif/toolchain-riscv32-esp@12.2.0
-  espressif/toolchain-xtensa-esp32s3@12.2.0
-  espressif/toolchain-xtensa-esp32@12.2.0
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
 
 build_src_filter = 
   ${arduino_base.build_src_filter} -<platform/nrf52/> -<platform/stm32wl> -<platform/rp2xx0> -<mesh/eth/> -<mesh/raspihttp>
