--- a/arch/esp32/esp32c6.ini
+++ b/arch/esp32/esp32c6.ini
@@ -1,5 +1,7 @@
 [esp32c6_base]
-extends = esp32_base
+extends = esp32_abstract
+custom_esp32_kind = esp32c6
+; TODO Switch to pioarduino
 platform = https://github.com/Jason2866/platform-espressif32.git#22faa566df8c789000f8136cd8d0aca49617af55
 build_flags =
   ${arduino_base.build_flags}
@@ -29,7 +31,7 @@ lib_deps =
   rweather/Crypto@^0.4.0
 
 build_src_filter = 
- ${esp32_base.build_src_filter} -<mesh/http> 
+ ${esp32_abstract.build_src_filter} -<mesh/http>
 
 monitor_speed = 460800
 monitor_filters = esp32_c3_exception_decoder
