--- a/arch/esp32/esp32s3.ini
+++ b/arch/esp32/esp32s3.ini
@@ -1,10 +1,10 @@
 [esp32s3_base]
-extends = esp32_base
+extends = esp32_abstract
 custom_esp32_kind = esp32s3
 
 monitor_speed = 115200
 
 # Work around BLE initialization failure
 build_flags =
-  ${esp32_base.build_flags}
+  ${esp32_abstract.build_flags}
   -DCONFIG_BT_NIMBLE_PINNED_TO_CORE=1
