meshtasticd: CH341 / HAT+ Auto Configuration

--- a/bin/config-dist.yaml
+++ b/bin/config-dist.yaml
@@ -6,6 +6,12 @@
 ### Including the "Module:" line!
 ---
 Lora:
+  # Default to auto-detecting the module type
+  # This will be overridden by configs from config.d
+  Module: auto
+
+#  # Uncomment to enable Simulation mode, or use --sim
+#  Module: sim
 
 #  Module: sx1262  # Waveshare SX1302 LISTEN ONLY AT THIS TIME!
 #  CS: 7
